tests/error/stray.gw
#! [contains somewhere] stray in program
1**µ
